<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/timerStopDeleteButton"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/timerStartButton"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/timerStopButton"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/timerResetButton"
        android:layout_width="104dp"
        android:layout_height="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    <Spinner-->
<!--        android:id="@+id/timerSecondSelector"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="63dp"-->
<!--        android:layout_marginEnd="8dp"-->
<!--        android:layout_marginBottom="228dp"-->
<!--        android:orientation="vertical"-->
<!--        android:textSize="48sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

<!--    <Spinner-->
<!--        android:id="@+id/timerMinuteSelector"-->
<!--        android:layout_width="60dp"-->
<!--        android:layout_height="63dp"-->
<!--        android:layout_marginEnd="84dp"-->
<!--        android:layout_marginBottom="228dp"-->
<!--        android:orientation="vertical"-->
<!--        android:textSize="48sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

    <TextView
        android:id="@+id/timerTitle"
        android:layout_width="128dp"
        android:layout_height="84dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="364dp"
        android:text="@string/timer_title"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/timerHourSelector"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="300dp"
        android:orientation="vertical"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/timerMinuteSelector"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="244dp"
        android:orientation="vertical"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/timerSecondSelector"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="184dp"
        android:orientation="vertical"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!--    <androidx.recyclerview.widget.RecyclerView-->
    <!--        android:id="@+id/hoursSelector"-->
    <!--        android:layout_width="48dp"-->
    <!--        android:layout_height="48dp"-->
    <!--        android:layout_marginEnd="160dp"-->
    <!--        android:layout_marginBottom="240dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        tools:itemCount="24" />-->

</androidx.constraintlayout.widget.ConstraintLayout>